@@ -27,6 +27,7 @@ Adds package =gptel= -- a LLM chat client.
 - Function ~yet-vc-print-root-log-latest~ bound to =C-c v L= in =vc-dir-mode=.
 - Enable =hs-minor-mode= in programming modes for blocks folding.
 - Add ~wip~ abbreviation to =rust-mode= for disabling WIP code warnings.
+- Set default PostgreSQL settings with =sql-postgres-login-params=.
 
 *** Changed
 - Configure more of GUI elements in ~early-init.el~ for Emacs startup stage.
